--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vue/component-compiler-utils": "^3.1.2",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-wasm-pack": "^6.0.1",
+    "postcss-modules": "^3.2.0",
+    "tailwindcss": "^1.5.1",
     "typescript": "^3.9.7",
     "vue-template-compiler": "^2.6.11"
   },
