--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ wasm-bindgen = "0.2.65"
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'console',
+]
